trocado de calça jeans para bermuda

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
            
-            <td>bermuda
+            <td>calça jeans
             </td>
             <td>azul</td>
             <td>P</td>
